[gd_scene load_steps=4 format=3 uid="uid://bxcua7bg4gpt2"]

[ext_resource type="Script" uid="uid://fnukkxkvyies" path="res://scripts/UI/shield_ui.gd" id="1_ovwb0"]
[ext_resource type="Texture2D" uid="uid://cegkocxiyq7kc" path="res://assets/sprites/Object/shield_full.png" id="2_cyxb4"]
[ext_resource type="Texture2D" uid="uid://dkhgp7uxy5fxm" path="res://assets/sprites/Object/shield_empty.png" id="3_uk4tc"]

[node name="ShieldUI" type="CanvasLayer"]
script = ExtResource("1_ovwb0")
texture_full = ExtResource("2_cyxb4")
texture_empty = ExtResource("3_uk4tc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="ShieldIcon1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="ShieldIcon2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="ShieldIcon3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
